# duckdb-pdf

./: CMakeLists.txt  COOKBOOK.md  LICENSE  README.md  ROADMAP.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
examples/: rag_pdf_vss.sql
examples/docpipeline/: README.md  pipeline.sql
packaging/: description.yml
scripts/: embed_base14_fonts.py  embed_tessdata.py  gen_signed_pdf.py  test_font_starved_redact.sh
src/: ocr_ops.cpp  ocr_ops.hpp  pdf_cli.cpp  pdf_extension.cpp  poppler_private_ops.cpp  qpdf_ops.cpp  qpdf_ops.hpp
src/include/: base14_fonts.hpp  pdf_cli.hpp  pdf_extension.hpp
test/: README.md
test/data/: gen_blank_split.py  gen_images_pdf.py  gen_incremental_pdf.py  gen_markdown_fixture.c  gen_pdfa.py  gen_redact.py  gen_sign_cert.py  gen_skewed_scan.py  gen_table_fixtures.c  sign_cert.pem  sign_key.pem  sign_key_encrypted.pem  signed_fixture_cert.pem  signed_fixture_key.pem
test/sql/: copy_pdf_options.test  copy_to_pdf.test  pdf_blob.test  pdf_chunks.test  pdf_full_api.test  pdf_images.test  pdf_inspect.test  pdf_ocr_bundled_eng.test  pdf_ocr_missing_model.test  pdf_ocr_preprocess.test  pdf_pdfa.test  pdf_redact.test  pdf_redact_lateral.test  pdf_revisions.test  pdf_scalars.test  pdf_sign.test  pdf_signatures.test  pdf_split_blank.test  pdf_to_markdown.test  pdf_to_pdf.test  pdf_to_png.test  pdf_watermark.test  pdf_write_page_images.test  qpdf_ops.test  qpdf_suite.test  read_pdf_basic.test  read_pdf_elements.test  read_pdf_ignore_errors.test  read_pdf_lines.test  read_pdf_meta.test  read_pdf_ocr.test  read_pdf_ocr_words.test  read_pdf_parallel_scan.test  read_pdf_tables.test  read_pdf_text_layer.test  read_pdf_validation.test  read_pdf_words.test  torture_concurrency.test  torture_copy_pdf.test  torture_idempotency.test  (+5 more)
